test/conformance/chainsaw/reports/background/two-rules-with-different-modes/good-resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: good-ns-1
  labels:
    purpose: production
---
apiVersion: v1
kind: Namespace
metadata:
  name: good-ns-2
  labels:
    purpose: production
    environment: production
