test/conformance/chainsaw/reports/background/two-rules-with-different-modes/reports-assert.yaml
apiVersion: wgpolicyk8s.io/v1beta1
kind: ClusterPolicyReport
metadata:
  labels:
    app.kubernetes.io/managed-by: kyverno
  ownerReferences:
  - apiVersion: v1
    kind: Namespace
    name: good-ns-1
results:
- policy: check-ns-labels
  result: fail
  rule: require-ns-env-label
  scored: true
  source: kyverno
- policy: check-ns-labels
  result: pass
  rule: require-ns-purpose-label
  scored: true
  source: kyverno
scope:
  apiVersion: v1
  kind: Namespace
  name: good-ns-1
summary:
  error: 0
  fail: 1
  pass: 1
  skip: 0
  warn: 0
---
apiVersion: wgpolicyk8s.io/v1beta1
kind: ClusterPolicyReport
metadata:
  labels:
    app.kubernetes.io/managed-by: kyverno
  ownerReferences:
  - apiVersion: v1
    kind: Namespace
    name: good-ns-2
results:
- policy: check-ns-labels
  result: pass
  rule: require-ns-env-label
  scored: true
  source: kyverno
- policy: check-ns-labels
  result: pass
  rule: require-ns-purpose-label
  scored: true
  source: kyverno
scope:
  apiVersion: v1
  kind: Namespace
  name: good-ns-2
summary:
  error: 0
  fail: 0
  pass: 2
  skip: 0
  warn: 0
---
apiVersion: wgpolicyk8s.io/v1beta1
kind: ClusterPolicyReport
metadata:
  labels:
    app.kubernetes.io/managed-by: kyverno
  ownerReferences:
  - apiVersion: v1
    kind: Namespace
    name: bad-ns-1
results:
- policy: check-ns-labels
  result: pass
  rule: require-ns-env-label
  scored: true
  source: kyverno
- policy: check-ns-labels
  result: fail
  rule: require-ns-purpose-label
  scored: true
  source: kyverno
scope:
  apiVersion: v1
  kind: Namespace
  name: bad-ns-1
summary:
  error: 0
  fail: 1
  pass: 1
  skip: 0
  warn: 0
---
apiVersion: wgpolicyk8s.io/v1beta1
kind: ClusterPolicyReport
metadata:
  labels:
    app.kubernetes.io/managed-by: kyverno
  ownerReferences:
  - apiVersion: v1
    kind: Namespace
    name: bad-ns-2
results:
- policy: check-ns-labels
  result: fail
  rule: require-ns-env-label
  scored: true
  source: kyverno
- policy: check-ns-labels
  result: fail
  rule: require-ns-purpose-label
  scored: true
  source: kyverno
scope:
  apiVersion: v1
  kind: Namespace
  name: bad-ns-2
summary:
  error: 0
  fail: 2
  pass: 0
  skip: 0
  warn: 0
