test/conformance/chainsaw/reports/background/two-rules-with-different-modes/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: two-rules-with-different-modes
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: good-resources.yaml
  - name: step-02
    try:
    - apply:
        file: bad-resources.yaml
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: check-ns-labels
  - name: step-04
    try:
    - sleep:
        duration: 10s
  - name: step-05
    try:
      - assert:
          file: reports-assert.yaml
